move .gitignore to root directory

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,4 @@ wp-content/plugins/hello.php
 /sitemap.xml.gz
 
 ### Docker ###
-*.env
-
-# End of https://www.gitignore.io/api/wordpress,windows,macos
+.env
