--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "2"
 services:
     wordpress:
-        image: wordpress:latest
+        build: ./my-wordpress
+        #image: wordpress:latest
         ports:
             - "8080:80"
         depends_on:
@@ -16,7 +17,7 @@ services:
         env_file: .env
         volumes:
             - db-data:/var/lib/mysql
-
+            - ./db-data/mysql.dump.sql:/docker-entrypoint-initdb.d/install_wordpress.sql
 # databaseのように永続的なストレージが欲しい場合に必要な設定
 # https://docs.docker.com/compose/compose-file/#volume-configuration-reference
 volumes:
