--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "wordpress/wp-content/plugins/agp-font-awesome-collection"]
 	path = wordpress/wp-content/plugins/agp-font-awesome-collection
 	url = https://github.com/wp-plugins/agp-font-awesome-collection
+[submodule "wordpress/wp-content/plugins/backwpup"]
+	path = wordpress/wp-content/plugins/backwpup
+	url = https://github.com/wp-plugins/backwpup
+[submodule "wordpress/wp-content/plugins/contact-form-7"]
+	path = wordpress/wp-content/plugins/contact-form-7
+	url = https://github.com/wp-plugins/contact-form-7
+[submodule "wordpress/wp-content/plugins/dashboard-sticky-notes"]
+	path = wordpress/wp-content/plugins/dashboard-sticky-notes
+	url = https://github.com/wp-plugins/dashboard-sticky-notes
+[submodule "wordpress/wp-content/plugins/ewww-image-optimizer"]
+	path = wordpress/wp-content/plugins/ewww-image-optimizer
+	url = https://github.com/wp-plugins/ewww-image-optimizer
